<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_label">Spotify Streamer</string>
    <string name="scores_label">scores app</string>
    <string name="library_label">library app</string>
    <string name="build_it_together_label">build it bigger</string>
    <string name="bacon_reader_label">bacon reader</string>
    <string name="build_it_bigger_label">build it bigger</string>
    <string name="capstone_label">capstone: my own app</string>
</resources>
