<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="#BBDEFB">

    <TextView
        android:id="@+id/nanodegree_apps"
        android:text="@string/nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="22dp"
        android:textColor="#01579B"
        />

    <Button
        android:id="@+id/spotify_streamer_button"
        android:text="@string/spotify_streamer_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:textAllCaps="true"
        android:onClick="onClickLaunchSpotifyStreamer"
        android:layout_below="@+id/nanodegree_apps"
        android:background="#F08C35"
        android:textColor="#fff"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"/>

    <Button
        android:id="@+id/scores_button"
        android:text="@string/scores_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:onClick="onClickLaunchScores"
        android:layout_below="@+id/spotify_streamer_button"
        android:background="#F08C35"
        android:textColor="#fff"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"/>

    <Button
        android:id="@+id/library_button"
        android:text="@string/library_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:onClick="onClickLaunchLibrary"
        android:layout_below="@+id/scores_button"
        android:background="#F08C35"
        android:textColor="#fff"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"/>

    <Button
        android:id="@+id/build_it_bigger_button"
        android:text="@string/build_it_bigger_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:onClick="onClickLaunchBuildItBigger"
        android:layout_below="@+id/library_button"
        android:background="#F08C35"
        android:textColor="#fff"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"/>

    <Button
        android:id="@+id/bacon_reader_button"
        android:text="@string/bacon_reader_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:onClick="onClickLaunchBaconReader"
        android:layout_below="@+id/build_it_bigger_button"
        android:background="#F08C35"
        android:textColor="#fff"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"/>

    <Button
        android:id="@+id/capstone_button"
        android:text="@string/capstone_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:onClick="onClickLaunchCapstone"
        android:layout_below="@+id/bacon_reader_button"
        android:background="#B71C1C"
        android:textColor="#fff"
        android:layout_marginLeft="6dp"/>

</RelativeLayout>
